<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_maps" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/ic_contacts"
        android:title="@string/nav_contact" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_report"
        android:title="@string/nav_report" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
